--- a/sass/site/masthead/_social-networks.scss
+++ b/sass/site/masthead/_social-networks.scss
@@ -29,3 +29,9 @@
         padding-left: 0;
     }
 }
+
+@media screen and (max-width:37.5) {
+	.social {
+		margin: 0;
+	}
+}
